fix: All available class features should be visible again feat: More distinct styling for class features feat: Add CSS mixin for panels

--- a/src/style/actor/pc.css
+++ b/src/style/actor/pc.css
@@ -49,3 +49,25 @@
     }
   }
 }
+
+.pc-feature {
+  padding: .5em 0;
+  
+  .pc-feature__item {
+    @extends %panel;
+  }
+
+  &--class {
+
+    .features--class {
+      dt {
+        margin-top: 0;
+        margin-bottom: .25em;
+      }
+      dd {
+        margin-top: 0;
+        margin-bottom: .5em;
+      }
+    }
+  }
+}
